# robot-plugin-example

./: CMakeLists.txt  README.md  package.xml  server_node.py
msg/: CustomOdom.msg  CustomTwist.msg
myrobot_plugin/: __init__.py  clients.py  types.py
srv/: RobotActionCall.srv
