<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>myrobot_plugin_interface</name>
  <version>0.0.0</version>
  <description>Example Robot Plugin with Custom Commands and Feedback</description>
  <maintainer email="contact@automatikarobotics.com">Automatika Robotics</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>automatika_ros_sugar</depend>
  <depend>ament_cmake_python</depend>
  <depend>rosidl_default_generators</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
